--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -4,11 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>footer</title>
+
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/footer.css">
 </head>
 
 <body>
-    <h1>This is Footer</h1>
+    <div id="footer">
+        <div class="footer-box">
+            <img src="/images/logo.jpg" alt="">
+            <h1>Heatuda City College</h1>
+            <h1>Heatuda City College</h1>
+
+
+            <h4>Piple-5 Hetauda</h4>
+            <h4>Makawanpur, Nepal</h4>
+
+        </div>
+        <div class="footer-box">
+            <h2>Quick Links</h2>
+            <a href="">About</a>
+            <a href="">ACADEMICS</a>
+            <a href="">INFRASTRUCTURE</a>
+        </div>
+        <div class="footer-box">
+            <a href="">contact</a>
+            <a href="">carears</a>
+            <a href="">ing</a>
+        </div>
+        <div class="footer-box">
+            <h2>programs</h2>
+            <a href="">it degree</a>
+            <a href="">business degree</a>
+
+        </div>
+        <div class="footer-box">
+            <h2>contact us</h2>
+            <a href="">
+                01-5970012, 9801042242
+            </a>
+            <a href="">info@gmail.com</a>
+        </div>
+    </div>
 </body>
 
 </html>
