--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,47 @@
 
 
 
+
+
+
+
+
+
+    <div id="advertisement-container">
+     
+
+
+      <!-- <div class="each-ad-div">
+        <img src="/images/student-two.avif" alt="">
+
+        <div id="info">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod inventore, voluptas dolorum consequuntur
+            consectetur maiores nemo, excepturi et perspiciatis corporis rerum est unde ipsam mollitia quae aspernatur!
+            Nostrum, excepturi et!</p>
+        </div>
+      </div> -->
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- evnt container -->
+
     <div id="index-event">
       <div id="headline">
         <h1>Hetauda City college</h1>
@@ -130,12 +171,11 @@
 
 
     <!-- footer part is here -->
-    <!-- <% include footer.ejs %> -->
+    <% include footer.ejs %>
 
-    <!-- type writer  -->
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
-    <script src="/javascripts/index.js"></script>
+
+      <script src="/javascripts/index.js"></script>
 </body>
 
 </html>
