--- a/views/header.ejs
+++ b/views/header.ejs
@@ -59,12 +59,14 @@
         <div id="about-us">
             <div id="first-div">
                 <h2>About Us</h2>
-                <a href="">About Hetauda City colleg</a>
-                <a href="">College Partner</a>
-                <a href="">People</a>
-                <a href="">Facilities & Infrastructure</a>
-                <a href="">Schedule an Appointment</a>
-                <a href="">Contact</a>
+                <a href="/aboutcitycollege">About Hetauda City colleg</a>
+                <a href="/collegepartner">Why HCC</a>
+                <a href="/leaderships">Leadership</a>
+                <a href="/facultyandstaffs">Faculty and Staffs</a>
+                <a href="/departmentofhcc">Department of hcc</a>
+                <a href="/location">Location</a>
+
+                <a href="/contact">Contact</a>
             </div>
 
             <div id="admission">
