hseb all and bachel bca has be completed

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -60,7 +60,7 @@
             <div id="first-div">
                 <h2>About Us</h2>
                 <a href="/aboutcitycollege">About Hetauda City colleg</a>
-                <a href="/collegepartner">Why HCC</a>
+                <a href="/whyhcc">Why HCC</a>
                 <a href="/leaderships">Leadership</a>
                 <a href="/facultyandstaffs">Faculty and Staffs</a>
                 <a href="/departmentofhcc">Department of hcc</a>
@@ -83,15 +83,22 @@
             <div id="first-div">
                 <div id="it-degree">
                     <h2>It Degree</h2>
-                    <a href="">Bachelor in computer Application (BCA)</a>
-                    <a href="">Bachelor in computer Application (BCA)</a>
-                    <a href="">Bachelo in Law</a>
+                    <a href="/bachelorincomputerapplication">Bachelor in computer Application (BCA)</a>
+                    <a href="/bachelorininformationtechnology">
+                        BSc Computer Science and Information Technology</a>
+                    <a href="/bachelorinlaw">Bachelo in Law</a>
                 </div>
                 <div id="business-degree">
                     <h2>Business Degree</h2>
-                    <a href="">Masters of Business Administration</a>
-                    <a href="">BA (Hons) Accounting & Finance</a>
-                    <a href="">Masters of Business Administration</a>
+                    <a href="/mastersofabusinessadministration">Masters of Business Administration</a>
+                </div>
+                <div id="business-degree">
+                    <h2>NEB Programmes</h2>
+                    <a href="/hsebscience">+2 in Science</a>
+                    <a href="/hsebmanagement">+2 in Management</a>
+                    <a href="/hseblaw">+2 in Law</a>
+                    <!-- <a href="/hsebhumanities">+2 in Humanities</a> -->
+                    <a href="/hsebhotelmanagement">+2 in Hotel Management</a>
                 </div>
             </div>
 
@@ -110,6 +117,7 @@
                     <a href="">Scholarship</a>
                     <a href="">Notices</a>
                 </div>
+
             </div>
         </div>
     </div>
