--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -58,8 +58,8 @@
     font-size: var(--icon-size);
     text-transform: uppercase;
 }
-#right-nav a i
-{
+
+#right-nav a i {
     color: #111;
 }
 
@@ -86,6 +86,7 @@
     transform: translateY(-100%);
     transition: .5s ease-in-out;
     top: 0;
+    overflow-y: scroll;
 }
 
 #all-programs.open {
@@ -170,7 +171,6 @@ h2#our-programe-headline {
 #our-programms #second-div {
     display: flex;
     flex-direction: column;
-    gap: 3vw;
 }
 
 /* cancel button */
